--- a/src/main/java/hello/servlet/web/item-service/item-service/src/main/resources/application.properties
+++ b/src/main/java/hello/servlet/web/item-service/item-service/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 server.port= 9092
+
+#전체 로그 레벨 설정(기본 info)
+logging.level.root=info
+
+#hello.itemservice 패키지와 그 하위 로그 레벨 설정
+#logging.level.hello.itemservice = debug
